2009-09-08  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/camel-list/camel/providers/pop3/camel-pop3-store.c (wait_for_login_delay):
	replaced a g_static_rec_mutex_lock by a g_static_rec_mutex_trylock
	to avoid deadlocks when a POP3 account is executing a disconnect
	caused by pop3_try_authenticate and wait_for_login_delay

2009-09-07  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/camel-list/camel/providers/pop3/camel-pop3-store.c (pop3_try_authenticate):
	do not report connection problems as authentication errors

2009-08-31  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c
	(do_notify_in_idle_destroy): fixes a crash when the TnyFolder does
	not have a CamfelFolder loaded

2009-08-28  Jürg Billeter  <j@bitron.ch>

	* libtinymail-camel/tny-camel-msg.c: (tny_camel_msg_parse):
	* libtinymail-camel/tny-camel-msg.h: add function to parse message
	from stream

2009-08-27  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c
	(tny_maemo_conic_device_reset): clear the priv->iap when reseting
	the device as it will be no longer valid.

	* camel/camel-mime-part.c (camel_mime_part_set_filename): if the
	mime-type does not have mime-type then set it as
	octet-stream. Merged from Camel upstream

2009-08-20  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c (do_notify_in_idle_destroy)
	(notify_folder_observers_about_in_idle): add a reference to the
	folder summary before notifying the observers in order to keep
	alive the summary instance the TnyCamelHeaders point to.

	* libedataserver/e-iconv.c (e_iconv_open)
	(e_iconv_charset_language): added a couple of extra checks to
	prevent crashes with malformed emails with large amounts of data
	in the charset field

2009-08-19  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/camel-tcp-stream-ssl.c: on calls to