@@ -1,5 +1,11 @@
 2009-09-08  Sergio Villar Senin  <svillar@igalia.com>
 
+	* libtinymail-camel/tny-camel-folder.c (folder_tracking_changed):
+	removed some unused variables.
+	(do_notify_in_idle_destroy): remove the reference to the summary
+	*after* freeing the TnyCamelHeader instances to prevent crashes
+	when the summary was already freed
+
 	* libtinymail-camel/camel-list/camel/providers/pop3/camel-pop3-store.c (wait_for_login_delay):
 	replaced a g_static_rec_mutex_lock by a g_static_rec_mutex_trylock
 	to avoid deadlocks when a POP3 account is executing a disconnect
